--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>MultiStepForm</title>
@@ -7,7 +8,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+  <div class="sidebar">
+    <app-root></app-root>
+  </div>
+  <!-- <div><span> sidebar-desktop</span><br>
+    <img src="./assets/images/bg-sidebar-desktop.svg" alt="">
+  </div>
+  <div><span>sidebar-mobile</span><br>
+    <img src="./assets/images/bg-sidebar-mobile.svg" alt="">
+  </div>
+  <div><span>favicon-32x32</span><br>
+    <img src="./assets/images/favicon-32x32.png" alt="">
+  </div>
+  <div><span>icon-advanced</span><br>
+    <img src="./assets/images/icon-advanced.svg" alt="">
+  </div>
+  <div><span>icon-arcade</span><br>
+    <img src="./assets/images/icon-arcade.svg" alt="">
+  </div>
+  <div><span>icon-checkmark</span><br>
+    <img src="./assets/images/icon-checkmark.svg" alt="">
+  </div>
+  <div><span>icon-pro</span><br>
+    <img src="./assets/images/icon-pro.svg" alt="">
+  </div>
+  <div><span>icon-ty</span><br>
+    <img src="./assets/images/icon-thank-you.svg" alt="">
+  </div> -->
 </body>
+
 </html>
